fix: change the content heading to spanish

--- a/app/content/next-themes.mdx
+++ b/app/content/next-themes.mdx
@@ -10,7 +10,7 @@ summary: 'Un tutorial para agregar un ThemeSwitcher con la biblioteca next-theme
 
 En este tutorial vamos a ver como agregar un ThemeSwitcher a tu web en nextjs 14, para ello vamos a usar la biblioteca [next-themes](https://github.com/pacocoursey/next-themes) que nos permite agregar un cambio de themas en dos lineas de codigo.
 
-## Contents
+## Contenido
 
 ## Características
 
