feat: add content

--- a/app/content/how-add-contents-table-in-mdx.mdx
+++ b/app/content/how-add-contents-table-in-mdx.mdx
@@ -12,6 +12,8 @@ summary: 'Un corto tutorial de como agregar una tabla de contenidos en mdx usand
 
 Para agregar una tabla de contenidos de una manera facila en MDX usaremos la biblioteca `remark-toc`, necesitamos instalar algunos paquetes y configurar el archivo `next.config.mjs` para que funcione correctamente.
 
+## Contenido
+
 ## Instalación
 
 ```bash
